# nbdevUV

./: README.md  hello.py  pyproject.toml  settings.ini
_proc/: 00_core.html.md  00_core.ipynb  index.html.md  index.ipynb  nbdev.yml
_proc/_docs/: core.html  robots.txt  search.json  sitemap.xml
nbdevUV/: _modidx.py  core.py
nbs/.ipynb_checkpoints/: 00_core-checkpoint.ipynb  index-checkpoint.ipynb
